@@ -1,3 +1,8 @@
+2010-06-06 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/x3d_vrml_grammar.h: Added MFDouble
+	parsing.
+
 2010-06-02 Braden McDaniel  <braden@endoframe.com>
 
 	Updates for 0.18.6 release.
